# project_root

./: READ.html  README.html  README.md  pyproject.toml  requirements.txt  streamlit_app.py  streamlit_comprehensive.py
app/: __init__.py  main.py
app/api/: routes.py
app/domain/: __init__.py  entities.py  interfaces.py  models.py
app/repositories/: __init__.py  annual_report_repository.py  financial_repository.py  news_repository.py  stock_repository.py
app/services/: __init__.py  financial_ratio_service.py  ollama_llm_service.py  sentiment_service.py  stock_analysis_service.py  technical_analysis_service.py
app/utils/: __init__.py  logger.py  report_builder.py  web_search.py
tests/: test_api.py  test_financial_service.py  test_models.py  test_sentiment_service.py  test_services.py  test_technical_service.py
