[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-analysis-app"
version = "1.0.0"
description = "Scalable stock analysis app with FastAPI backend and Streamlit frontend"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "streamlit>=1.29.0",
    "requests>=2.31.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "yfinance>=0.2.36",
    "pytest>=7.4.0",
    "httpx>=0.26.0",
]

[project.optional-dependencies]
dev = ["pytest-cov", "ruff"]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
